<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:text="@string/diagram_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignBaseline="@+id/spinner1"
        android:layout_margin="@dimen/activity_horizontal_margin" />

    <Spinner
        android:id="@+id/spinner1"
        android:entries="@array/diagram_type_array"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/period_tv"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spinner1"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_alignBaseline="@+id/spinner2" />

    <Spinner
        android:id="@+id/spinner2"
        android:entries="@array/period_array"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner1"
        android:layout_alignLeft="@+id/spinner1" />

    <TextView
        android:id="@+id/textView3"
        android:text="@string/data_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner2"
        android:layout_alignParentLeft="true"
        android:layout_alignBaseline="@+id/spinner3"
        android:layout_margin="@dimen/activity_horizontal_margin" />

    <Spinner
        android:id="@+id/spinner3"
        android:entries="@array/data_type_array"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner2"
        android:layout_alignLeft="@+id/spinner2" />

    <TextView
        android:id="@+id/textView4"
        android:text="@string/visual_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner3"
        android:layout_alignParentLeft="true"
        android:layout_alignBaseline="@+id/spinner4"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/spinner4"
        android:entries="@array/visual_type_array"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner3"
        android:layout_alignLeft="@+id/spinner3"
        android:visibility="gone" />

    <Button
        android:id="@+id/okButton"
        android:text="@string/ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner4"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/cancelButton"
        android:text="@string/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner4"
        android:layout_toLeftOf="@+id/okButton" />

</RelativeLayout>